fix: Gradient angle input number field misaligned in WP-5.6

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -565,7 +565,7 @@
 }
 /** Gradient Color Picker */
 .customize-control .ast-gradient-color-picker input[type="number"] {
-	width: 50%;
+    max-width: 65px;
 }
 /** Gradient Color Picker -> RGBA & HSLA range fields */
 .customize-control .ast-gradient-color-picker .is-alpha-enabled .components-base-control__field [type="number"] {
